--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,14 +4,15 @@
 }
 
 .navbox {
-  @apply fixed top-0 left-0 right-0 z-50;
+  @apply fixed top-0 left-0 right-0 z-50 bg-ta-grey-3;
 }
 
 .title-bx {
   @apply overflow-hidden w-full text-center select-none text-agency-gray uppercase font-bold leading-none;
 }
 
-.navbar {
+.navbar,
+.foot-bx {
   @apply flex flex-nowrap bg-agency-white h-d-80-px trans-out-700  items-center content-center justify-center min-w-d-240-px;
 }
 
@@ -33,6 +34,10 @@
 
 .content-bx {
   @apply pt-d-88-px trans-out-700 min-h-screen;
+}
+
+.foot-bx {
+  @apply h-auto;
 }
 
 @screen xl-med {
