refactor: changed Navbox to Header and optimized css
- changed Navbox to Header
- created dedicated css files

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,3 +12,7 @@ body {
 .trans-out-700 {
   @apply ease-out duration-700 transition-all;
 }
+
+.con-box {
+  @apply trans-out-700 overflow-hidden p-d-4-px w-full;
+}
