--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,5 +1,7 @@
-.card-con,
-.navbar {
+@import './logo-svg.css';
+@import './header.css';
+
+.card-con {
   @apply overflow-hidden p-d-4-px w-full;
 }
 
@@ -11,12 +13,11 @@
   @apply overflow-hidden w-full text-center select-none text-agency-gray uppercase font-bold leading-none;
 }
 
-.navbar,
 .foot-bx {
   @apply flex flex-nowrap bg-agency-white h-d-80-px trans-out-700  items-center content-center justify-center min-w-d-240-px;
 }
 
-.navbar-bx {
+.navbar-bxx {
   @apply overflow-hidden flex flex-col items-center trans-out-700 content-center justify-center w-full h-full max-h-full;
 
   &.is-logo {
@@ -62,7 +63,7 @@
   .navbar {
     @apply h-d-64-px;
 
-    .navbar-bx {
+    .navbar-bxx {
       .title-bx {
         @apply tracking-0.15;
       }
