--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -16,3 +16,7 @@ body {
 .con-box {
   @apply trans-out-700 overflow-hidden p-d-4-px w-full;
 }
+
+.grid-con {
+  @apply trans-out-700 overflow-hidden px-d-4-px w-full flex items-center content-center justify-center;
+}
