--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,5 +1,7 @@
 @import './logo-svg.css';
 @import './header.css';
+@import './content-box.css';
+@import './banner-box.css';
 
 .card-con {
   @apply overflow-hidden p-d-4-px w-full;
@@ -33,7 +35,7 @@
   }
 }
 
-.content-bx {
+.content-bxx {
   @apply pt-d-88-px trans-out-700 min-h-screen;
 }
 
@@ -54,7 +56,7 @@
     @apply h-d-72-px;
   }
 
-  .content-bx {
+  .content-bxx {
     @apply pt-d-80-px;
   }
 }
@@ -70,7 +72,7 @@
     }
   }
 
-  .content-bx {
+  .content-bxx {
     @apply pt-d-72-px;
   }
 }
