refactor: add content box responsive breakpoints

--- a/src/styles/components/content-box.css
+++ b/src/styles/components/content-box.css
@@ -1,3 +1,15 @@
 .content-bx {
   @apply trans-out-700 overflow-hidden px-d-4-px w-full flex items-center content-center justify-start pt-d-88-px -mt-d-4-px min-h-screen flex-col;
 }
+
+@screen xl-med {
+  .content-bx {
+    @apply pt-d-80-px;
+  }
+}
+
+@screen s-large {
+  .content-bx {
+    @apply pt-d-72-px;
+  }
+}
