--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -1,3 +1,3 @@
-.banner-bx {
+.banner {
   @apply trans-out-700 overflow-hidden p-d-4-px w-full flex items-center content-center justify-center   flex-col bg-agency-white;
 }
