--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,6 +1,7 @@
 @import './logo-svg.css';
 @import './header.css';
 @import './content-box.css';
+@import './card.css';
 @import './banner.css';
 @import './footer.css';
 
