--- a/src/styles/components/page.css
+++ b/src/styles/components/page.css
@@ -6,6 +6,12 @@
       @apply bg-transparent p-0;
     }
   }
+
+  &.is-rentals {
+    iframe {
+      @apply h-screen w-full overflow-y-auto;
+    }
+  }
 }
 
 .page-inner {
