--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -6,77 +6,4 @@
 @import './footer.css';
 @import './navbox.css';
 @import './page.css';
-
-.card-con {
-  @apply overflow-hidden p-d-4-px w-full;
-}
-
-.navboxxxx {
-  @apply fixed top-0 left-0 right-0 z-50 bg-ta-grey-3;
-}
-
-.title-bx {
-  @apply overflow-hidden w-full text-center select-none text-agency-gray uppercase font-bold leading-none;
-}
-
-.foots-bx {
-  @apply flex flex-nowrap bg-agency-white h-d-80-px trans-out-700  items-center content-center justify-center min-w-d-240-px;
-}
-
-.headbar-bxx {
-  @apply overflow-hidden flex flex-col items-center trans-out-700 content-center justify-center w-full h-full max-h-full;
-
-  &.is-logo {
-    @apply max-h-d-64-px max-w-screen-sm;
-
-    #logoSvg {
-      @apply -mt-d-10-px;
-    }
-  }
-
-  .title-bx {
-    @apply text-d-10-px -mt-d-20-px tracking-0.25 trans-out-700;
-  }
-}
-
-.content-bxx {
-  @apply pt-d-88-px trans-out-700 min-h-screen;
-}
-
-.foots-bx {
-  @apply h-auto;
-}
-
-.footser-bx {
-  @apply overflow-hidden w-full flex items-center content-center justify-center;
-
-  &.is-eho {
-    @apply h-d-88-px w-d-88-px;
-  }
-}
-
-@screen xl-med {
-  .headbar {
-    @apply h-d-72-px;
-  }
-
-  .content-bxx {
-    @apply pt-d-80-px;
-  }
-}
-
-@screen s-large {
-  .headbar {
-    @apply h-d-64-px;
-
-    .headbar-bxx {
-      .title-bx {
-        @apply tracking-0.15;
-      }
-    }
-  }
-
-  .content-bxx {
-    @apply pt-d-72-px;
-  }
-}
+@import './contact-form.css';
