--- a/src/styles/components/contact-form.css
+++ b/src/styles/components/contact-form.css
@@ -7,7 +7,7 @@
 }
 
 .contact-form-title {
-  @apply trans-out-700 overflow-hidden flex justify-center items-center content-center flex-nowrap w-full select-none bg-agency-highlight leading-loose text-agency-white uppercase font-semibold text-d-16-px py-d-4-px;
+  @apply trans-out-700 overflow-hidden flex justify-center items-center content-center flex-nowrap w-full select-none bg-agency-highlight leading-loose text-agency-white uppercase font-semibold text-d-16-px py-d-4-px min-h-d-40-px;
 }
 
 .contact-form-entry-bx {
