--- a/src/styles/components/content-box.css
+++ b/src/styles/components/content-box.css
@@ -1,5 +1,5 @@
 .content-bx {
-  @apply trans-out-700 overflow-hidden px-d-4-px w-full flex items-center content-center justify-start pt-d-88-px -mt-d-4-px min-h-screen flex-col;
+  @apply trans-out-700 overflow-hidden px-d-4-px w-full flex items-center content-center justify-start pt-d-88-px -mt-d-4-px min-h-screen flex-col min-w-sm;
 }
 
 .content-top-bx {
